aguda-compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declaration declarations_tail
Rule 3     declarations_tail -> declaration declarations_tail
Rule 4     declarations_tail -> empty
Rule 5     declaration -> variable_declaration
Rule 6     declaration -> function_declaration
Rule 7     function_declaration -> LET ID LPAREN parameters RPAREN COLON function_type EQUALS exp
Rule 8     parameters -> variable parameters_tail
Rule 9     parameters_tail -> COMMA variable parameters_tail
Rule 10    parameters_tail -> empty
Rule 11    type -> base_type array_suffix
Rule 12    base_type -> INT_TYPE
Rule 13    base_type -> BOOL_TYPE
Rule 14    base_type -> UNIT_TYPE
Rule 15    base_type -> STRING_TYPE
Rule 16    array_suffix -> LBRACKET RBRACKET array_suffix
Rule 17    array_suffix -> empty
Rule 18    function_type -> type ARROW type
Rule 19    function_type -> LPAREN type function_type_tail RPAREN ARROW type
Rule 20    function_type_tail -> COMMA type function_type_tail
Rule 21    function_type_tail -> empty
Rule 22    exp -> variable
Rule 23    exp -> literal
Rule 24    exp -> binary_exp
Rule 25    exp -> unary_exp
Rule 26    exp -> function_call
Rule 27    exp -> assignment
Rule 28    exp -> variable_declaration
Rule 29    exp -> conditional
Rule 30    exp -> while_loop
Rule 31    exp -> array_creation
Rule 32    exp -> array_access
Rule 33    exp -> group
Rule 34    variable -> ID
Rule 35    variable -> UNDERSCORE
Rule 36    literal -> INT_LITERAL
Rule 37    literal -> TRUE
Rule 38    literal -> FALSE
Rule 39    literal -> NULL
Rule 40    literal -> UNIT
Rule 41    literal -> STRING_LITERAL
Rule 42    binary_exp -> exp PLUS exp
Rule 43    binary_exp -> exp MINUS exp
Rule 44    binary_exp -> exp TIMES exp
Rule 45    binary_exp -> exp DIVIDE exp
Rule 46    binary_exp -> exp MOD exp
Rule 47    binary_exp -> exp POWER exp
Rule 48    binary_exp -> exp EQUALS exp
Rule 49    binary_exp -> exp NOT_EQUALS exp
Rule 50    binary_exp -> exp LESS exp
Rule 51    binary_exp -> exp LESS_EQUAL exp
Rule 52    binary_exp -> exp GREATER exp
Rule 53    binary_exp -> exp GREATER_EQUAL exp
Rule 54    binary_exp -> exp AND exp
Rule 55    binary_exp -> exp OR exp
Rule 56    binary_exp -> exp SEMICOLON exp
Rule 57    unary_exp -> MINUS exp
Rule 58    unary_exp -> NOT exp
Rule 59    function_call -> variable LPAREN arguments RPAREN
Rule 60    arguments -> exp arguments_tail
Rule 61    arguments_tail -> COMMA exp arguments_tail
Rule 62    arguments_tail -> empty
Rule 63    assignment -> SET lhs EQUALS exp
Rule 64    lhs -> variable
Rule 65    lhs -> array_access
Rule 66    array_access -> lhs LBRACKET exp RBRACKET
Rule 67    variable_declaration -> LET variable COLON type EQUALS exp
Rule 68    conditional -> IF exp THEN exp conditional_else
Rule 69    conditional_else -> ELSE exp
Rule 70    conditional_else -> empty
Rule 71    while_loop -> WHILE exp DO exp
Rule 72    array_creation -> NEW type LBRACKET exp BAR exp RBRACKET
Rule 73    group -> LPAREN exp RPAREN
Rule 74    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
ARROW                : 18 19
BAR                  : 72
BOOL_TYPE            : 13
COLON                : 7 67
COMMA                : 9 20 61
DIVIDE               : 45
DO                   : 71
ELSE                 : 69
EQUALS               : 7 48 63 67
FALSE                : 38
GREATER              : 52
GREATER_EQUAL        : 53
ID                   : 7 34
IF                   : 68
INT_LITERAL          : 36
INT_TYPE             : 12
LBRACKET             : 16 66 72
LESS                 : 50
LESS_EQUAL           : 51
LET                  : 7 67
LPAREN               : 7 19 59 73
MINUS                : 43 57
MOD                  : 46
NEW                  : 72
NOT                  : 58
NOT_EQUALS           : 49
NULL                 : 39
OR                   : 55
PLUS                 : 42
POWER                : 47
RBRACKET             : 16 66 72
RPAREN               : 7 19 59 73
SEMICOLON            : 56
SET                  : 63
STRING_LITERAL       : 41
STRING_TYPE          : 15
THEN                 : 68
TIMES                : 44
TRUE                 : 37
UNDERSCORE           : 35
UNIT                 : 40
UNIT_TYPE            : 14
WHILE                : 71
error                : 

Nonterminals, with rules where they appear

arguments            : 59
arguments_tail       : 60 61
array_access         : 32 65
array_creation       : 31
array_suffix         : 11 16
assignment           : 27
base_type            : 11
binary_exp           : 24
conditional          : 29
conditional_else     : 68
declaration          : 2 3
declarations         : 1
declarations_tail    : 2 3
empty                : 4 10 17 21 62 70
exp                  : 7 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 60 61 63 66 67 68 68 69 71 71 72 72 73
function_call        : 26
function_declaration : 6
function_type        : 7
function_type_tail   : 19 20
group                : 33
lhs                  : 63 66
literal              : 23
parameters           : 7
parameters_tail      : 8 9
program              : 0
type                 : 18 18 19 19 20 67 72
unary_exp            : 25
variable             : 8 9 22 59 64 67
variable_declaration : 5 28
while_loop           : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declaration declarations_tail
    (5) declaration -> . variable_declaration
    (6) declaration -> . function_declaration
    (67) variable_declaration -> . LET variable COLON type EQUALS exp
    (7) function_declaration -> . LET ID LPAREN parameters RPAREN COLON function_type EQUALS exp

    LET             shift and go to state 6

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .

    $end            reduce using rule 1 (program -> declarations .)


state 3

    (2) declarations -> declaration . declarations_tail
    (3) declarations_tail -> . declaration declarations_tail
    (4) declarations_tail -> . empty
    (5) declaration -> . variable_declaration
    (6) declaration -> . function_declaration
    (74) empty -> .
    (67) variable_declaration -> . LET variable COLON type EQUALS exp
    (7) function_declaration -> . LET ID LPAREN parameters RPAREN COLON function_type EQUALS exp

    $end            reduce using rule 74 (empty -> .)
    LET             shift and go to state 6

    declaration                    shift and go to state 7
    declarations_tail              shift and go to state 8
    empty                          shift and go to state 9
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5

state 4

    (5) declaration -> variable_declaration .

    LET             reduce using rule 5 (declaration -> variable_declaration .)
    $end            reduce using rule 5 (declaration -> variable_declaration .)


state 5

    (6) declaration -> function_declaration .

    LET             reduce using rule 6 (declaration -> function_declaration .)
    $end            reduce using rule 6 (declaration -> function_declaration .)


state 6

    (67) variable_declaration -> LET . variable COLON type EQUALS exp
    (7) function_declaration -> LET . ID LPAREN parameters RPAREN COLON function_type EQUALS exp
    (34) variable -> . ID
    (35) variable -> . UNDERSCORE

    ID              shift and go to state 11
    UNDERSCORE      shift and go to state 12

    variable                       shift and go to state 10

state 7

    (3) declarations_tail -> declaration . declarations_tail
    (3) declarations_tail -> . declaration declarations_tail
    (4) declarations_tail -> . empty
    (5) declaration -> . variable_declaration
    (6) declaration -> . function_declaration
    (74) empty -> .
    (67) variable_declaration -> . LET variable COLON type EQUALS exp
    (7) function_declaration -> . LET ID LPAREN parameters RPAREN COLON function_type EQUALS exp

    $end            reduce using rule 74 (empty -> .)
    LET             shift and go to state 6

    declaration                    shift and go to state 7
    declarations_tail              shift and go to state 13
    empty                          shift and go to state 9
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5

state 8

    (2) declarations -> declaration declarations_tail .

    $end            reduce using rule 2 (declarations -> declaration declarations_tail .)


state 9

    (4) declarations_tail -> empty .

    $end            reduce using rule 4 (declarations_tail -> empty .)


state 10

    (67) variable_declaration -> LET variable . COLON type EQUALS exp

    COLON           shift and go to state 14


state 11

    (7) function_declaration -> LET ID . LPAREN parameters RPAREN COLON function_type EQUALS exp
    (34) variable -> ID .

    LPAREN          shift and go to state 15
    COLON           reduce using rule 34 (variable -> ID .)


state 12

    (35) variable -> UNDERSCORE .

    COLON           reduce using rule 35 (variable -> UNDERSCORE .)
    COMMA           reduce using rule 35 (variable -> UNDERSCORE .)
    RPAREN          reduce using rule 35 (variable -> UNDERSCORE .)
    LPAREN          reduce using rule 35 (variable -> UNDERSCORE .)
    PLUS            reduce using rule 35 (variable -> UNDERSCORE .)
    MINUS           reduce using rule 35 (variable -> UNDERSCORE .)
    TIMES           reduce using rule 35 (variable -> UNDERSCORE .)
    DIVIDE          reduce using rule 35 (variable -> UNDERSCORE .)
    MOD             reduce using rule 35 (variable -> UNDERSCORE .)
    POWER           reduce using rule 35 (variable -> UNDERSCORE .)
    EQUALS          reduce using rule 35 (variable -> UNDERSCORE .)
    NOT_EQUALS      reduce using rule 35 (variable -> UNDERSCORE .)
    LESS            reduce using rule 35 (variable -> UNDERSCORE .)
    LESS_EQUAL      reduce using rule 35 (variable -> UNDERSCORE .)
    GREATER         reduce using rule 35 (variable -> UNDERSCORE .)
    GREATER_EQUAL   reduce using rule 35 (variable -> UNDERSCORE .)
    AND             reduce using rule 35 (variable -> UNDERSCORE .)
    OR              reduce using rule 35 (variable -> UNDERSCORE .)
    SEMICOLON       reduce using rule 35 (variable -> UNDERSCORE .)
    LET             reduce using rule 35 (variable -> UNDERSCORE .)
    $end            reduce using rule 35 (variable -> UNDERSCORE .)
    THEN            reduce using rule 35 (variable -> UNDERSCORE .)
    DO              reduce using rule 35 (variable -> UNDERSCORE .)
    RBRACKET        reduce using rule 35 (variable -> UNDERSCORE .)
    ELSE            reduce using rule 35 (variable -> UNDERSCORE .)
    BAR             reduce using rule 35 (variable -> UNDERSCORE .)
    LBRACKET        reduce using rule 35 (variable -> UNDERSCORE .)


state 13

    (3) declarations_tail -> declaration declarations_tail .

    $end            reduce using rule 3 (declarations_tail -> declaration declarations_tail .)


state 14

    (67) variable_declaration -> LET variable COLON . type EQUALS exp
    (11) type -> . base_type array_suffix
    (12) base_type -> . INT_TYPE
    (13) base_type -> . BOOL_TYPE
    (14) base_type -> . UNIT_TYPE
    (15) base_type -> . STRING_TYPE

    INT_TYPE        shift and go to state 18
    BOOL_TYPE       shift and go to state 19
    UNIT_TYPE       shift and go to state 20
    STRING_TYPE     shift and go to state 21

    type                           shift and go to state 16
    base_type                      shift and go to state 17

state 15

    (7) function_declaration -> LET ID LPAREN . parameters RPAREN COLON function_type EQUALS exp
    (8) parameters -> . variable parameters_tail
    (34) variable -> . ID
    (35) variable -> . UNDERSCORE

    ID              shift and go to state 22
    UNDERSCORE      shift and go to state 12

    parameters                     shift and go to state 23
    variable                       shift and go to state 24

state 16

    (67) variable_declaration -> LET variable COLON type . EQUALS exp

    EQUALS          shift and go to state 25


state 17

    (11) type -> base_type . array_suffix
    (16) array_suffix -> . LBRACKET RBRACKET array_suffix
    (17) array_suffix -> . empty
    (74) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 27
    EQUALS          reduce using rule 74 (empty -> .)
    ARROW           reduce using rule 74 (empty -> .)
    COMMA           reduce using rule 74 (empty -> .)
    RPAREN          reduce using rule 74 (empty -> .)

  ! LBRACKET        [ reduce using rule 74 (empty -> .) ]

    array_suffix                   shift and go to state 26
    empty                          shift and go to state 28

state 18

    (12) base_type -> INT_TYPE .

    LBRACKET        reduce using rule 12 (base_type -> INT_TYPE .)
    EQUALS          reduce using rule 12 (base_type -> INT_TYPE .)
    ARROW           reduce using rule 12 (base_type -> INT_TYPE .)
    COMMA           reduce using rule 12 (base_type -> INT_TYPE .)
    RPAREN          reduce using rule 12 (base_type -> INT_TYPE .)


state 19

    (13) base_type -> BOOL_TYPE .

    LBRACKET        reduce using rule 13 (base_type -> BOOL_TYPE .)
    EQUALS          reduce using rule 13 (base_type -> BOOL_TYPE .)
    ARROW           reduce using rule 13 (base_type -> BOOL_TYPE .)
    COMMA           reduce using rule 13 (base_type -> BOOL_TYPE .)
    RPAREN          reduce using rule 13 (base_type -> BOOL_TYPE .)


state 20

    (14) base_type -> UNIT_TYPE .

    LBRACKET        reduce using rule 14 (base_type -> UNIT_TYPE .)
    EQUALS          reduce using rule 14 (base_type -> UNIT_TYPE .)
    ARROW           reduce using rule 14 (base_type -> UNIT_TYPE .)
    COMMA           reduce using rule 14 (base_type -> UNIT_TYPE .)
    RPAREN          reduce using rule 14 (base_type -> UNIT_TYPE .)


state 21

    (15) base_type -> STRING_TYPE .

    LBRACKET        reduce using rule 15 (base_type -> STRING_TYPE .)
    EQUALS          reduce using rule 15 (base_type -> STRING_TYPE .)
    ARROW           reduce using rule 15 (base_type -> STRING_TYPE .)
    COMMA           reduce using rule 15 (base_type -> STRING_TYPE .)
    RPAREN          reduce using rule 15 (base_type -> STRING_TYPE .)


state 22

    (34) variable -> ID .

    COMMA           reduce using rule 34 (variable -> ID .)
    RPAREN          reduce using rule 34 (variable -> ID .)
    LPAREN          reduce using rule 34 (variable -> ID .)
    PLUS            reduce using rule 34 (variable -> ID .)
    MINUS           reduce using rule 34 (variable -> ID .)
    TIMES           reduce using rule 34 (variable -> ID .)
    DIVIDE          reduce using rule 34 (variable -> ID .)
    MOD             reduce using rule 34 (variable -> ID .)
    POWER           reduce using rule 34 (variable -> ID .)
    EQUALS          reduce using rule 34 (variable -> ID .)
    NOT_EQUALS      reduce using rule 34 (variable -> ID .)
    LESS            reduce using rule 34 (variable -> ID .)
    LESS_EQUAL      reduce using rule 34 (variable -> ID .)
    GREATER         reduce using rule 34 (variable -> ID .)
    GREATER_EQUAL   reduce using rule 34 (variable -> ID .)
    AND             reduce using rule 34 (variable -> ID .)
    OR              reduce using rule 34 (variable -> ID .)
    SEMICOLON       reduce using rule 34 (variable -> ID .)
    LET             reduce using rule 34 (variable -> ID .)
    $end            reduce using rule 34 (variable -> ID .)
    THEN            reduce using rule 34 (variable -> ID .)
    DO              reduce using rule 34 (variable -> ID .)
    RBRACKET        reduce using rule 34 (variable -> ID .)
    ELSE            reduce using rule 34 (variable -> ID .)
    BAR             reduce using rule 34 (variable -> ID .)
    LBRACKET        reduce using rule 34 (variable -> ID .)
    COLON           reduce using rule 34 (variable -> ID .)


state 23

    (7) function_declaration -> LET ID LPAREN parameters . RPAREN COLON function_type EQUALS exp

    RPAREN          shift and go to state 29


state 24

    (8) parameters -> variable . parameters_tail
    (9) parameters_tail -> . COMMA variable parameters_tail
    (10) parameters_tail -> . empty
    (74) empty -> .

    COMMA           shift and go to state 31
    RPAREN          reduce using rule 74 (empty -> .)

    parameters_tail                shift and go to state 30
    empty                          shift and go to state 32

state 25

    (67) variable_declaration -> LET variable COLON type EQUALS . exp
    (22) exp -> . variable
    (23) exp -> . literal
    (24) exp -> . binary_exp
    (25) exp -> . unary_exp
    (26) exp -> . function_call
    (27) exp -> . assignment
    (28) exp -> . variable_declaration
    (29) exp -> . conditional
    (30) exp -> . while_loop
    (31) exp -> . array_creation
    (32) exp -> . array_access
    (33) exp -> . group
    (34) variable -> . ID
    (35) variable -> . UNDERSCORE
    (36) literal -> . INT_LITERAL
    (37) literal -> . TRUE
    (38) literal -> . FALSE
    (39) literal -> . NULL
    (40) literal -> . UNIT
    (41) literal -> . STRING_LITERAL
    (42) binary_exp -> . exp PLUS exp
    (43) binary_exp -> . exp MINUS exp
    (44) binary_exp -> . exp TIMES exp
    (45) binary_exp -> . exp DIVIDE exp
    (46) binary_exp -> . exp MOD exp
    (47) binary_exp -> . exp POWER exp
    (48) binary_exp -> . exp EQUALS exp
    (49) binary_exp -> . exp NOT_EQUALS exp
    (50) binary_exp -> . exp LESS exp
    (51) binary_exp -> . exp LESS_EQUAL exp
    (52) binary_exp -> . exp GREATER exp
    (53) binary_exp -> . exp GREATER_EQUAL exp
    (54) binary_exp -> . exp AND exp
    (55) binary_exp -> . exp OR exp
    (56) binary_exp -> . exp SEMICOLON exp
    (57) unary_exp -> . MINUS exp
    (58) unary_exp -> . NOT exp
    (59) function_call -> . variable LPAREN arguments RPAREN
    (63) assignment -> . SET lhs EQUALS exp
    (67) variable_declaration -> . LET variable COLON type EQUALS exp
    (68) conditional -> . IF exp THEN exp conditional_else
    (71) while_loop -> . WHILE exp DO exp
    (72) array_creation -> . NEW type LBRACKET exp BAR exp RBRACKET
    (66) array_access -> . lhs LBRACKET exp RBRACKET
    (73) group -> . LPAREN exp RPAREN
    (64) lhs -> . variable
    (65) lhs -> . array_access

    ID              shift and go to state 22
    UNDERSCORE      shift and go to state 12
    INT_LITERAL     shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    UNIT            shift and go to state 51
    STRING_LITERAL  shift and go to state 52
    MINUS           shift and go to state 53
    NOT             shift and go to state 54
    SET             shift and go to state 56
    LET             shift and go to state 33
    IF              shift and go to state 58
    WHILE           shift and go to state 59
    NEW             shift and go to state 60
    LPAREN          shift and go to state 55

    variable                       shift and go to state 34
    exp                            shift and go to state 35
    literal                        shift and go to state 36
    binary_exp                     shift and go to state 37
    unary_exp                      shift and go to state 38
    function_call                  shift and go to state 39
    assignment                     shift and go to state 40
    variable_declaration           shift and go to state 41
    conditional                    shift and go to state 42
    while_loop                     shift and go to state 43
    array_creation                 shift and go to state 44
    array_access                   shift and go to state 45
    group                          shift and go to state 46
    lhs                            shift and go to state 57

state 26

    (11) type -> base_type array_suffix .

    EQUALS          reduce using rule 11 (type -> base_type array_suffix .)
    LBRACKET        reduce using rule 11 (type -> base_type array_suffix .)
    ARROW           reduce using rule 11 (type -> base_type array_suffix .)
    COMMA           reduce using rule 11 (type -> base_type array_suffix .)
    RPAREN          reduce using rule 11 (type -> base_type array_suffix .)


state 27

    (16) array_suffix -> LBRACKET . RBRACKET array_suffix

    RBRACKET        shift and go to state 61


state 28

    (17) array_suffix -> empty .

    EQUALS          reduce using rule 17 (array_suffix -> empty .)
    LBRACKET        reduce using rule 17 (array_suffix -> empty .)
    ARROW           reduce using rule 17 (array_suffix -> empty .)
    COMMA           reduce using rule 17 (array_suffix -> empty .)
    RPAREN          reduce using rule 17 (array_suffix -> empty .)


state 29

    (7) function_declaration -> LET ID LPAREN parameters RPAREN . COLON function_type EQUALS exp

    COLON           shift and go to state 62


state 30

    (8) parameters -> variable parameters_tail .

    RPAREN          reduce using rule 8 (parameters -> variable parameters_tail .)


state 31

    (9) parameters_tail -> COMMA . variable parameters_tail
    (34) variable -> . ID
    (35) variable -> . UNDERSCORE

    ID              shift and go to state 22
    UNDERSCORE      shift and go to state 12

    variable                       shift and go to state 63

state 32

    (10) parameters_tail -> empty .

    RPAREN          reduce using rule 10 (parameters_tail -> empty .)


state 33

    (67) variable_declaration -> LET . variable COLON type EQUALS exp
    (34) variable -> . ID
    (35) variable -> . UNDERSCORE

    ID              shift and go to state 22
    UNDERSCORE      shift and go to state 12

    variable                       shift and go to state 10

state 34

    (22) exp -> variable .
    (59) function_call -> variable . LPAREN arguments RPAREN
    (64) lhs -> variable .

    PLUS            reduce using rule 22 (exp -> variable .)
    MINUS           reduce using rule 22 (exp -> variable .)
    TIMES           reduce using rule 22 (exp -> variable .)
    DIVIDE          reduce using rule 22 (exp -> variable .)
    MOD             reduce using rule 22 (exp -> variable .)
    POWER           reduce using rule 22 (exp -> variable .)
    EQUALS          reduce using rule 22 (exp -> variable .)
    NOT_EQUALS      reduce using rule 22 (exp -> variable .)
    LESS            reduce using rule 22 (exp -> variable .)
    LESS_EQUAL      reduce using rule 22 (exp -> variable .)
    GREATER         reduce using rule 22 (exp -> variable .)
    GREATER_EQUAL   reduce using rule 22 (exp -> variable .)
    AND             reduce using rule 22 (exp -> variable .)
    OR              reduce using rule 22 (exp -> variable .)
    SEMICOLON       reduce using rule 22 (exp -> variable .)
    LET             reduce using rule 22 (exp -> variable .)
    $end            reduce using rule 22 (exp -> variable .)
    RPAREN          reduce using rule 22 (exp -> variable .)
    THEN            reduce using rule 22 (exp -> variable .)
    DO              reduce using rule 22 (exp -> variable .)
    COMMA           reduce using rule 22 (exp -> variable .)
    RBRACKET        reduce using rule 22 (exp -> variable .)
    ELSE            reduce using rule 22 (exp -> variable .)
    BAR             reduce using rule 22 (exp -> variable .)
    LPAREN          shift and go to state 64
    LBRACKET        reduce using rule 64 (lhs -> variable .)


state 35

    (67) variable_declaration -> LET variable COLON type EQUALS exp .
    (42) binary_exp -> exp . PLUS exp
    (43) binary_exp -> exp . MINUS exp
    (44) binary_exp -> exp . TIMES exp
    (45) binary_exp -> exp . DIVIDE exp
    (46) binary_exp -> exp . MOD exp
    (47) binary_exp -> exp . POWER exp
    (48) binary_exp -> exp . EQUALS exp
    (49) binary_exp -> exp . NOT_EQUALS exp
    (50) binary_exp -> exp . LESS exp
    (51) binary_exp -> exp . LESS_EQUAL exp
    (52) binary_exp -> exp . GREATER exp
    (53) binary_exp -> exp . GREATER_EQUAL exp
    (54) binary_exp -> exp . AND exp
    (55) binary_exp -> exp . OR exp
    (56) binary_exp -> exp . SEMICOLON exp

    LET             reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    $end            reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    EQUALS          reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    NOT_EQUALS      reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    AND             reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    OR              reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    SEMICOLON       reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    RPAREN          reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    THEN            reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    DO              reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    COMMA           reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    RBRACKET        reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    ELSE            reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    BAR             reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .)
    PLUS            shift and go to state 66
    MINUS           shift and go to state 67
    TIMES           shift and go to state 68
    DIVIDE          shift and go to state 69
    MOD             shift and go to state 70
    POWER           shift and go to state 71
    LESS            shift and go to state 73
    LESS_EQUAL      shift and go to state 74
    GREATER         shift and go to state 75
    GREATER_EQUAL   shift and go to state 76

  ! PLUS            [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! MINUS           [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! TIMES           [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! DIVIDE          [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! MOD             [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! POWER           [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! LESS            [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! LESS_EQUAL      [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! GREATER         [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! GREATER_EQUAL   [ reduce using rule 67 (variable_declaration -> LET variable COLON type EQUALS exp .) ]
  ! EQUALS          [ shift and go to state 65 ]
  ! NOT_EQUALS      [ shift and go to state 72 ]
  ! AND             [ shift and go to state 77 ]
  ! OR              [ shift and go to state 78 ]
  ! SEMICOLON       [ shift and go to state 79 ]


state 36
